# UNO---The-GAME

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: card.frag  card.vert
src/: glad.c  main.cpp
